[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fincept-terminal"
version = "0.1.0"
description = "A powerful financial terminal for market data, analysis, and insights"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Fincept Corporation", email = "support@fincept.in" }
]
keywords = ["finance", "terminal", "market-data", "stocks", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotext>=5.2.8",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/Fincept-Corporation/FinceptTerminal"
Repository = "https://github.com/Fincept-Corporation/FinceptTerminal"
Issues = "https://github.com/Fincept-Corporation/FinceptTerminal/issues"
Documentation = "https://docs.fincept.in"

[project.scripts]
fincept = "fincept_terminal.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["fincept_terminal"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so a quick `pytest` run doesn't require pytest-cov installed
# -p no:warnings added personally to reduce noise while exploring the codebase
# --tb=short gives more concise tracebacks which I find easier to read during dev
# -x added personally: stop on first failure so I don't scroll through a wall of errors
# Removed -x so the full test suite runs; I want to see all failures at once when
# doing a broader review pass, not just stop at the first one
addopts = "-v -p no:warnings --tb=short"

[tool.coverage.run]
source = ["src/fincept_terminal"]
omit = ["tests/*", "**/__main__.py"]
